# ready-set-boole

./: CMakeLists.txt  Makefile  README.md  adder.cpp  multiplier.cpp  rsb.hpp
src/: Set.cpp  Set.hpp  adder.cpp  conjunctiveNormalForm.cpp  evalFormula.cpp  evalSet.cpp  grayCode.cpp  isSatisfiable.cpp  multiplier.cpp  negationNormalForm.cpp  powerSet.cpp  spaceFillingCurve.cpp  truthTable.cpp  truthTableString.cpp  utils.cpp
test/: CMakeLists.txt  adderTest.cpp  assertFormulaTest.cpp  conjunctiveNormalFormTest.cpp  evalFormulaTest.cpp  evalSetTest.cpp  grayCodeTest.cpp  isSatisfiableTest.cpp  multiplierTest.cpp  negationNormalFormTest.cpp  powerSetTest.cpp  setOperationTest.cpp  spaceFillingCurveTest.cpp  truthTableTest.cpp
